--- a/static/navbar.css
+++ b/static/navbar.css
@@ -1,7 +1,8 @@
 ul.breadcrumb {
     padding: 10px 16px;
     list-style: none;
-    background-color: #eee;
+
+    color: aqua;
 
 }
 
@@ -13,18 +14,24 @@ font-size: 18px;
 
 ul.breadcrumb li + li:before {
     padding: 8px;
-    color: black;
+    color: rgb(255, 255, 255);
     content: "/\00a0";
 }
 
 ul.breadcrumb li a {
-    color: #0275d8;
+    color: #ffffff;
     text-decoration: none;
 }
 
 ul.breadcrumb li a:hover {
-    color: #01447e;
+    color: #ff5555;
     text-decoration: underline;
 }
+.navbar-brand img{
+    height: 100px;
+    width: 100px;
 
-
+}
+nav{
+    margin-bottom: 40px;
+}
