--- a/static/navbar.css
+++ b/static/navbar.css
@@ -1,14 +1,17 @@
 ul.breadcrumb {
     padding: 10px 16px;
     list-style: none;
-
     color: aqua;
+    position: fixed;
+    margin-left: 10em;
 
 }
 
 ul.breadcrumb li {
 display: inline;
-font-size: 18px;
+font-size: 20px;
+
+
 
 }
 
@@ -34,4 +37,21 @@ ul.breadcrumb li a:hover {
 }
 nav{
     margin-bottom: 40px;
+
+}
+
+.custom-list li {
+        text-align: left;
+}
+
+@media screen and (max-width: 768px) {
+    ul.breadcrumb {
+        display: none;
+    }
+}
+@media screen and (min-width: 769px) {
+    ul.breadcrumb {
+        display: block;
+
+    }
 }
