--- a/static/signup_form.css
+++ b/static/signup_form.css
@@ -10,6 +10,7 @@ body {
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    height: 760px;
 }
 
 
@@ -18,7 +19,7 @@ h1 {
 }
 
 .form-group {
-    margin-bottom: 15px;
+    margin-bottom: 5px;
 }
 
 label {
