--- a/static/product_table.css
+++ b/static/product_table.css
@@ -10,4 +10,5 @@ body {
 th, td, h1 {
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    vertical-align: middle;
 }
