--- a/static/signup_form.css
+++ b/static/signup_form.css
@@ -3,7 +3,10 @@ body {
     background-color: #f5f5f5;
 }
 
+
+
 .container {
+    background-color: rgba(255, 255, 255, 0.8);
     max-width: 400px;
     margin: 0 auto;
     padding: 20px;
