--- a/static/navbar.css
+++ b/static/navbar.css
@@ -1,5 +1,5 @@
 .content{
-    margin-top: 10em;
+    margin-top: 6em;
 }
 ul.breadcrumb {
     padding: 10px 16px;
@@ -33,9 +33,12 @@ ul.breadcrumb li a:hover {
     text-decoration: underline;
 }
 .navbar-brand img{
-    height: 100px;
-    width: 100px;
+    height: 60px;
+    width: 60px;
 
+}
+nav{
+    height: 80px;
 }
 
 .custom-list li {
