--- a/static/signup_form.css
+++ b/static/signup_form.css
@@ -25,21 +25,21 @@ h1 {
     margin-bottom: 5px;
 }
 
-label {
-    display: block;
-    font-weight: bold;
-}
+    label {
+        display: block;
+        font-weight: bold;
+    }
 
-input[type="text"],
-input[type="email"],
-input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    margin-top: 5px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-}
+    input[type="text"],
+    input[type="email"],
+    input[type="password"] {
+        width: 100%;
+        padding: 10px;
+        margin-top: 5px;
+        margin-bottom: 10px;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+    }
 
 button[type="submit"] {
     background-color: #007BFF;
@@ -53,3 +53,51 @@ button[type="submit"] {
     button[type="submit"]:hover {
         background-color: #0056b3;
     }
+
+    @media only screen   
+    and (min-device-width : 768px)   
+   
+    {
+        .container {
+            background-color: rgba(255, 255, 255, 0.8);
+            max-width: 500px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            height: 550px;
+        }
+        .form-group {
+    margin-bottom: 2px;
+}
+
+label {
+    display: block;
+    font-weight: bold;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+    width: 100%;
+    padding: 2px;
+    margin-top: 2px;
+    margin-bottom: .2px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+    button[type="submit"] {
+        background-color: #007BFF;
+        color: #fff;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 3px;
+        cursor: pointer;
+    }
+    h1{
+        font-size: 20px;
+        font-weight: bold;
+    }
+}
