--- a/static/employee_reg.css
+++ b/static/employee_reg.css
@@ -61,7 +61,8 @@ button[type="submit"]:hover {
 }
 
 @media only screen   
-and (min-device-width : 768px)   
+and (min-device-width : 768px)
+and (max-device-width: 1080px)
 
 {
     .container {
