--- a/static/signup_form.css
+++ b/static/signup_form.css
@@ -55,8 +55,8 @@ button[type="submit"] {
     }
 
     @media only screen   
-    and (min-device-width : 768px)   
-   
+    and (min-device-width : 768px)
+    and (max-device-width: 1080px)
     {
         .container {
             background-color: rgba(255, 255, 255, 0.8);
