--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -23,8 +23,8 @@
             text-align: center;
         }
 
-        h1 {
-            color: black;
+        h1, h2{
+            color: white;
         }
 
         .container a {
